--- a/contact.html
+++ b/contact.html
@@ -3797,8 +3797,14 @@
 							<div class="elementor-widget-container">
 
 								<div class="ld-gmap-container pos-rel">
+									<!--
 									<div class="ld-gmap h-100" data-plugin-map="true"
 										data-plugin-options='{"style":"blueEssence","address":"7420 Shore Rd, Brooklyn, NY 11209, USA","marker_style":"default","markers":null,"map":{"zoom":16,"mapTypeId":"roadmap","zoomControl":true}}'>
+									</div>
+									-->
+
+									<div class="ld-gmap h-100" data-plugin-map="true"
+										data-plugin-options='{"style":"blueEssence","address":"89-65 P. Mai Dịch, Mai Dịch, Cầu Giấy, Hà Nội, Vietnam","marker_style":"default","markers":null,"map":{"zoom":16,"mapTypeId":"roadmap","zoomControl":true}}'>
 									</div>
 
 
