290 Maryam Springs 260, Paris

--- a/contact.html
+++ b/contact.html
@@ -3414,7 +3414,7 @@
 														</defs>
 													</svg></div>
 											</div>
-											<p class="lqd-iconbox-heading ">290 Maryam Springs 260, Paris </p>
+											<p class="lqd-iconbox-heading "> Mai Dich, Ha Noi </p><!--290 Maryam Springs 260, Paris-->
 
 
 											<p></p>
