--- a/contact.html
+++ b/contact.html
@@ -3502,7 +3502,7 @@
 														</defs>
 													</svg></div>
 											</div>
-											<p class="lqd-iconbox-heading ">+47 213 5941 295 </p>
+											<p class="lqd-iconbox-heading ">+84 035 2053 998</p> <!-- +47 213 5941 295-->
 
 
 											<p></p>
