--- a/index.html
+++ b/index.html
@@ -6892,7 +6892,7 @@
 					<div class="elementor-element elementor-element-dc1c4dd elementor-icon-list--layout-inline elementor-list-item-link-full_width elementor-widget elementor-widget-icon-list" data-id="dc1c4dd" data-element_type="widget" data-widget_type="icon-list.default">
 						<div class="elementor-widget-container">
 							<ul class="elementor-icon-list-items elementor-inline-items">
-								<!--Phone number-->
+								<!--Phone number
 								<li class="elementor-icon-list-item elementor-inline-item">
 									<span class="elementor-icon-list-icon">
 										<svg xmlns="http://www.w3.org/2000/svg" width="18" height="18"
@@ -6919,7 +6919,8 @@
 										</svg> </span>
 									<span class="elementor-icon-list-text">+840352053998</span>
 								</li>
-
+								-->
+								
 								<!--Email-->
 								<li class="elementor-icon-list-item elementor-inline-item">
 									<span class="elementor-icon-list-icon">
@@ -6947,7 +6948,7 @@
 									</span>
 								</li>
 
-								<!--Adress-->
+								<!--Adress
 								<li class="elementor-icon-list-item elementor-inline-item">
 									<span class="elementor-icon-list-icon">
 										<svg xmlns="http://www.w3.org/2000/svg" width="18" height="18"
@@ -6974,7 +6975,7 @@
 										</svg> </span>
 									<span class="elementor-icon-list-text">Mai Dich, Ha Noi</span>
 								</li>
-
+								-->
 							</ul>
 						</div>
 					</div>
