--- a/privacy.html
+++ b/privacy.html
@@ -3807,7 +3807,7 @@
 						data-id="dc1c4dd" data-element_type="widget" data-widget_type="icon-list.default">
 						<div class="elementor-widget-container">
 							<ul class="elementor-icon-list-items elementor-inline-items">
-								<!--Phone number-->
+								<!--Phone number
 								<li class="elementor-icon-list-item elementor-inline-item">
 									<span class="elementor-icon-list-icon">
 										<svg xmlns="http://www.w3.org/2000/svg" width="18" height="18"
@@ -3834,6 +3834,7 @@
 										</svg> </span>
 									<span class="elementor-icon-list-text">+840352053998</span>
 								</li>
+								-->
 
 								<!--Email-->
 								<li class="elementor-icon-list-item elementor-inline-item">
@@ -3864,7 +3865,7 @@
 									</span>
 								</li>
 
-								<!--Adress-->
+								<!--Adress
 								<li class="elementor-icon-list-item elementor-inline-item">
 									<span class="elementor-icon-list-icon">
 										<svg xmlns="http://www.w3.org/2000/svg" width="18" height="18"
@@ -3891,7 +3892,8 @@
 										</svg> </span>
 									<span class="elementor-icon-list-text">Mai Dich, Ha Noi</span>
 								</li>
-
+								-->
+								
 							</ul>
 						</div>
 					</div>
