--- a/services.html
+++ b/services.html
@@ -3185,7 +3185,7 @@
 						data-id="dc1c4dd" data-element_type="widget" data-widget_type="icon-list.default">
 						<div class="elementor-widget-container">
 							<ul class="elementor-icon-list-items elementor-inline-items">
-								<!--Phone number-->
+								<!--Phone number
 								<li class="elementor-icon-list-item elementor-inline-item">
 									<span class="elementor-icon-list-icon">
 										<svg xmlns="http://www.w3.org/2000/svg" width="18" height="18"
@@ -3212,6 +3212,7 @@
 										</svg> </span>
 									<span class="elementor-icon-list-text">+840352053998</span>
 								</li>
+								-->
 
 								<!--Email-->
 								<li class="elementor-icon-list-item elementor-inline-item">
@@ -3242,7 +3243,7 @@
 									</span>
 								</li>
 
-								<!--Adress-->
+								<!--Adress
 								<li class="elementor-icon-list-item elementor-inline-item">
 									<span class="elementor-icon-list-icon">
 										<svg xmlns="http://www.w3.org/2000/svg" width="18" height="18"
@@ -3269,7 +3270,7 @@
 										</svg> </span>
 									<span class="elementor-icon-list-text">Mai Dich, Ha Noi</span>
 								</li>
-
+								-->
 							</ul>
 						</div>
 					</div>
