--- a/contact.html
+++ b/contact.html
@@ -3417,7 +3417,7 @@
 														</defs>
 													</svg></div>
 											</div>
-											<p class="lqd-iconbox-heading "> Mai Dich, Ha Noi </p><!--290 Maryam Springs 260, Paris-->
+											<p class="lqd-iconbox-heading "> 290 Maryam Springs 260, Paris </p><!--290 Maryam Springs 260, Paris-->
 
 
 											<p></p>
