fix link Badges

--- a/privacy.html
+++ b/privacy.html
@@ -4786,11 +4786,11 @@
 								<div class="elementor-widget-container">
 									<div class="elementor-social-icons-wrapper elementor-grid">
 
-										<a href="https://apps.apple.com/us/developer/"
+										<a href="https://apps.apple.com/us/developer/deeply-ai/id1809787876?itscg=30200&itsct=apps_box_badge&mttnsubad=1809787876"
 											style="display: inline-block;">
 											<img src="https://toolbox.marketingtools.apple.com/api/v2/badges/download-on-the-app-store/black/en-us"
 												alt="Download on the App Store"
-												style="width: 120px; height: 40px; vertical-align: middle; object-fit: contain;">
+												style="width: 120px; height: 40px; vertical-align: middle; object-fit: contain;" />
 										</a>
 
 									</div>
