--- a/privacy.html
+++ b/privacy.html
@@ -4771,7 +4771,7 @@
 									<div id="ld-fancy-heading-66f2b31eee559" class="ld-fancy-heading pos-rel">
 										<p
 											class="ld-fh-element d-inline-block pos-rel  lqd-highlight-classic lqd-highlight-grow-left p">
-											DEEPLYAI - ACCOUNTING PLATFORM HUMAN RESOURCES JSC <br>
+											DEEPLY AI <br>
 											Copyright © 2025 DeeplyAi. All rights reserved.</p>
 									</div>
 
