--- a/terms.html
+++ b/terms.html
@@ -4143,7 +4143,7 @@
 								<div class="contents ">
 
 									<p>The terms of this agreement ("Terms of Service") govern the
-										relationship between you and <b>DeeplyAI - ACCOUNTING PLATFORM HUMAN RESOURCES JSC </b> (hereinafter
+										relationship between you and <b>Deeply AI - ACCOUNTING PLATFORM HUMAN RESOURCES JSC </b> (hereinafter
 										"<b>DeeplyAI</b>" or "Us" or "We") regarding your use of
 										<b>DeeplyAI's</b> applications, games, websites and related services
 										(the "Service"). Use of the Service is also governed by
@@ -5080,7 +5080,7 @@
 									<div id="ld-fancy-heading-66f2b31eee559" class="ld-fancy-heading pos-rel">
 										<p
 											class="ld-fh-element d-inline-block pos-rel  lqd-highlight-classic lqd-highlight-grow-left p">
-											DEEPLYAI - ACCOUNTING PLATFORM HUMAN RESOURCES JSC <br>
+											DEEPLY AI<br>
 											Copyright © 2025 DeeplyAi. All rights reserved.</p>
 									</div>
 
