--- a/index.html
+++ b/index.html
@@ -7228,7 +7228,7 @@
 								</div>
 								<div class="elementor-element elementor-element-b87bda5 elementor-widget-mobile__width-initial elementor-widget elementor-widget-ld_fancy_image" data-id="b87bda5" data-element_type="widget" data-widget_type="ld_fancy_image.default">
 									
-									<a href="https://apps.apple.com/us/developer/deeply-ai/id1809787876?itscg=30200&itsct=apps_box_badge&mttnsubad=1809787876"
+									<a href="https://apps.apple.com/us/developer/deeply-ai/id1809787876"
 										style="display: inline-block;">
 										<img src="https://toolbox.marketingtools.apple.com/api/v2/badges/download-on-the-app-store/black/en-us"
 											alt="Download on the App Store"
@@ -11249,7 +11249,7 @@
 									data-id="cc4bd10" data-element_type="widget" data-widget_type="ld_button.default">
 									<div class="elementor-widget-container">
 
-										<a href="https://apps.apple.com/us/developer/deeply-ai/id1809787876?itscg=30200&itsct=apps_box_badge&mttnsubad=1809787876"
+										<a href="https://apps.apple.com/us/developer/deeply-ai/id1809787876"
 										style="display: inline-block;">
 										<img src="https://toolbox.marketingtools.apple.com/api/v2/badges/download-on-the-app-store/black/en-us"
 											alt="Download on the App Store"
@@ -11631,7 +11631,7 @@
 									<div id="ld-fancy-heading-66f2b31eee559" class="ld-fancy-heading pos-rel">
 										<p
 											class="ld-fh-element d-inline-block pos-rel  lqd-highlight-classic lqd-highlight-grow-left p">
-											DEEPLYAI - ACCOUNTING PLATFORM HUMAN RESOURCES JSC <br>
+											DEEPLY AI <br>
 											Copyright © 2025 DeeplyAi. All rights reserved.</p>
 									</div>
 
@@ -11646,7 +11646,7 @@
 								<div class="elementor-widget-container">
 									<div class="elementor-social-icons-wrapper elementor-grid">
 										
-										<a href="https://apps.apple.com/us/developer/deeply-ai/id1809787876?itscg=30200&itsct=apps_box_badge&mttnsubad=1809787876"
+										<a href="https://apps.apple.com/us/developer/deeply-ai/id1809787876"
 										style="display: inline-block;">
 										<img src="https://toolbox.marketingtools.apple.com/api/v2/badges/download-on-the-app-store/black/en-us"
 											alt="Download on the App Store"
